# XOffsetDatastructure

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CPP_JSON_REPRESENTATION.md  DATA_PROTOCOL_COMPARISON.md  LICENSE  OffsetDataStruct.sln  OffsetDataStruct.vcxproj  OffsetDataStruct.vcxproj.filters  README.md  RELEASE_GUIDE.md  RELEASE_QUICKREF.md  build.bat  build.sh  release_v2.0.sh  xoffsetdatastructure2.hpp  xtypesignature.hpp
.github/workflows/: ci.yml
bak/: AUTO_TYPE_SIGNATURE_RESEARCH.md  BUILD_AND_RUN_GUIDE.md  BUILD_BAT_UPDATE.md  BUILD_FILES_UPDATE_SUMMARY.md  BUILD_SH_COMPLETION_SUMMARY.md  BUILD_SH_GUIDE.md  CLEANUP_SUMMARY.md  COMPILE_TIME_VS_CONSTEXPR.md  CONDITIONAL_COMPILATION_REMOVAL.md  CPP26_FEATURES_CHECKLIST.md  DEMO_MODIFICATIONS_SUMMARY.md  FEATURES_STATUS_SUMMARY.md  FINAL_SUMMARY.md  Makefile  NEW_TESTS_QUICKREF.md  P1306R2_SUPPORT_STATUS.md  P2996R10_API_UPDATE_FIX.md  PREPROCESSOR_MACRO_TEST_REPORT.md  QUICK_BUILD_REFERENCE.md  README.md  REFLECTION_COMPLETE_REPORT.md  REFLECTION_FIX_GUIDE.md  REFLECTION_QUICKSTART.md  REFLECTION_TESTS_SUMMARY.md  REFLECTION_TEST_RECOMMENDATIONS.md  REVERT_SUMMARY.md  SESSION_CONTEXT.md  SPLICE_CONSTEXPR_ANALYSIS.md  SPLICE_OPERATIONS_EXPLAINED.md  SPLICE_VISUAL_EXPLANATION.md  TEST_ADDITION_SUMMARY.md  TEST_STATUS_REPORT.md  TEST_VERIFICATION_REPORT.md  TYPE_SIGNATURE_LIMITATION.md  test_refl_simple  test_refl_simple.cpp  test_typesig_helloworld  test_typesig_helloworld.cpp  test_typesig_index.cpp  test_typesig_macro  (+5 more)
benchmark/: benchmark.vcxproj  benchmark.vcxproj.filters  xbenchmark3.cpp
benchmark17/: benchmark17.vcxproj  benchmark17.vcxproj.filters  xbenchmark3_17.cpp
datatest/: demoMacOS  xdemo
demo/: CMakeLists.txt  demo.vcxproj  demo.vcxproj.filters  xdemo.cpp
demoMacOS/demoMacOS.xcodeproj/: project.pbxproj
demolinux/: xdemo  xdemo.cpp  xmisc.hpp  xsimpleallocator.hpp  xsimplestoragebitmap.hpp  xsimplestoragefreelist.hpp  xtypes.hpp
demov2/: CMakeLists.txt
docs/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CI_PLATFORM_ANALYSIS.md  CODE_REVIEW_FINDINGS.md  CROSS_PLATFORM_TESTING.md  CROSS_PLATFORM_TYPES.md  DSL_GUIDE.md  FIX_CHAR_DEFAULT.md  GENERATED_TYPES.md  GITHUB_ACTIONS_CI.md  LOCAL_TEST_REPORT.md  OPTIMIZATION_FROM_CPP26.md  PLATFORM_REQUIREMENTS.md  QUICK_REFERENCE.md  RECURSIVE_VS_FOLD_EXPRESSION.md  REFLECTION_ANALYSIS.md  SESSION_SUMMARY_FOLD_OPTIMIZATION.md  TEST_IMPLEMENTATION_SUMMARY.md  TYPE_SIGNATURE.md  TYPE_SIGNATURE_COMPARISON.md  TYPE_SIGNATURE_WORKFLOW.md
examples/: CMakeLists.txt  demo.cpp  game_data.hpp  helloworld.cpp  player.hpp  signature_calculation_demo.cpp  signature_demo.cpp  xdemo_v2.cpp  xoffsetdatastructure2_demo.cpp  xoffsetdatastructure_demo.cpp  xtypesignature_demo.cpp
libs/: cista.h
libs/capnproto/lib/: capnp-json.lib  kj-test.lib  (+2 more)
misc/: zlibcompressor.cpp  zlibcompressor.hpp
next_practical/examples/: helloworld.cpp
next_practical/schemas/: player.xds.yaml
schema/capnproto/: character.capnp  character.capnp.c++  character.capnp.h  test.capnp.c++  test.capnp.h
schema/flatbuffers/: character.fbs  character_generated.h  monster_generated.h
schema/protobuf/: character.proto  test.pb.h
schemas/: README.md  alignment_test.xds.yaml  basic_types.xds.yaml  compaction_test.xds.yaml  game_data.xds.yaml  map_set_test.xds.yaml  modify_test.xds.yaml  nested_test.xds.yaml  serialization_test.xds.yaml  test_types.xds.yaml  vector_test.xds.yaml
scripts/: build_clang_p2996_wsl.sh  build_cpp26_wsl.sh  rebuild_with_libcxx.sh  test_reflection.sh  upgrade_cmake_wsl.sh  wsl_run_tests.bat
scripts/setup/: wsl_build_clang_p2996.bat  wsl_quick_validation.bat  wsl_upgrade_cmake.bat
tests/: CMakeLists.txt  README.md  run_all_tests.cpp  test_alignment.cpp  test_basic_types.cpp  test_class_type_signatures.cpp  test_compact_automatic.cpp  test_compaction.cpp  test_compiletime_type_signature.cpp  test_comprehensive.cpp  test_const_support.cpp  test_demo_repro.cpp  test_field_limit_fix.cpp  test_generated_types.cpp  test_init_order.cpp  test_manual_gamedata.cpp  test_map_set.cpp  test_member_iteration.cpp  test_minimal_alloc.cpp  test_mmap_loading.cpp  test_mmap_overflow.cpp  test_mmap_write.cpp  test_modify.cpp  test_msvc_compat.cpp  test_mutation_cost.cpp  test_nested.cpp  test_nested_alloc.cpp  test_platform.cpp  test_polymorphic_rejection.cpp  test_reflection_compaction.cpp  test_reflection_comparison.cpp  test_reflection_operators.cpp  test_reflection_serialization.cpp  test_reflection_type_signature.cpp  test_serialization.cpp  test_splice_operations.cpp  test_static_assert.cpp  test_type_introspection.cpp  test_type_safety.cpp  test_type_safety_comprehensive.cpp  (+3 more)
tools/: xds_generator.py
wsl/: ADVANCED_META_FEATURES.md  ASCII_CLEANUP.md  COMPILATION_FIXES.md  ENCODING_FIX.md  FIRST_TIME_SETUP.md  P2996_API_VERSION_GUIDE.md  P2996_CONSTEVAL_ONLY_CONSTRAINT.md  P2996_COVERAGE.md  P2996_ERROR_ANALYSIS.md  P2996_ERROR_SUMMARY.md  P2996_FEATURES.md  P2996_TEST_SUITE_SUMMARY.md  PATH_FIX_EXPLANATION.md  QUICK_REFERENCE.md  README.md  RUNNING_EXAMPLES.md  TEST10_ITERATION_IMPLEMENTATION.md  WSL2_QUICK_START.md  WSL_TESTS_ONLY.md  build_cpp26_wsl.sh  fix_wsl_paths.bat  test_advanced_meta.cpp  test_advanced_meta_R10_CHANGES.md  test_cpp26_simple.cpp  test_meta_full.cpp  test_meta_functions.cpp  test_p2996_comprehensive.cpp  test_reflect_syntax.cpp  test_reflection_final.cpp  test_reflection_syntax.cpp  test_splice.cpp  wsl.bat  wsl_build_project.bat  wsl_build_tests_only.bat  wsl_check_environment.bat  wsl_diagnose.bat  wsl_quick_validation.bat  wsl_rebuild_with_reflection.bat  wsl_run_all_examples.bat  wsl_run_demo.bat  (+2 more)
wsl/wsl_tests_build/: test_cpp26_simple  test_reflection_final  test_reflection_syntax  test_splice
xoffsetdatastructure/: xconfig.hpp  xmisc.hpp  xsimpleallocator.hpp  xsimplestoragebitmap.hpp  xtypeholder.hpp  xtypes.hpp  xtypesignature.hpp
xoffsetdatastructure2/: xallocationalgorithm.hpp  xconfig2.hpp  xmanagedmemory.hpp  xtypeholder2.hpp  xtypes2.hpp  xtypesignature2.hpp
xtypesignature/: xtypesignature.hpp
(+24 files in other folders)
